# article-strage

./: README.md
Qiita/created-dev-env-of-Clang-that-can-test-easily-with-gooletest/: Dockerfile  Makefile  README.md
Qiita/created-dev-env-of-Clang-that-can-test-easily-with-gooletest/src/: node.c  node.h
Qiita/created-dev-env-of-Clang-that-can-test-easily-with-gooletest/tests/: CMakeLists.txt  node_test.cc
